manifests/apps/valheim/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy
spec:
  podSelector:
    matchLabels:
      network/allow-valheim-game: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: UDP
          port: 2456-2457 # Port range for Valheim game traffic
  egress:
    - ports:
        - protocol: UDP
          port: 2456-2457 # Port range for Valheim game traffic
